# SuperSerpent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  fuse.h  main.c  params.h  slothenc_V2.c
.github/workflows/: build.yml
core/: bench_sloth.c  bench_sloth.h  crypto_mode_sloth.c  crypto_mode_sloth.h  logic_sloth.c  logic_sloth.h  makevcvol_sloth.c  makevcvol_sloth.h  slothfuse.c  slothfuse.h  slothfuse_vc.c  slothfuse_vc.h  test_sloth.c  test_sloth.h  utils_sloth.c  utils_sloth.h
fuse/fuse37/: libfuse_config.h
pbkdf2/: pbkdf2.c  pbkdf2.h  test_pbkdf2.c
pbkdf2/whirlpool/: Whirlpool.c  cpu.h  test_wh.c
rand/: rand.c  rand.h
tests/: testsloth.sh
vcserpent/: Serpent.c  Serpent.h  SerpentFast.c  SerpentFast.h  dec.c  enc.c
